fix: fix input lable wrap issue

--- a/src/assets/scss/_form.scss
+++ b/src/assets/scss/_form.scss
@@ -12,6 +12,7 @@
   .el-form-item__label {
     text-align: left;
     padding-left: 10px;
+    white-space: nowrap;
   }
 }
 
